Dice - Fix on small devices

--- a/Dice/Content/Site.css
+++ b/Dice/Content/Site.css
@@ -9,7 +9,7 @@ html {
     min-height: 100%;
 }
 
-@media (min-width: 1px) {
+@media (min-height: 1px) {
     body {
         /* Margin bottom by footer height */
         margin-bottom: 30px;
@@ -27,7 +27,7 @@ html {
     }
 }
 
-@media (min-width: 992px) {
+@media (min-height: 657px) {
     body {
         margin-bottom: 60px;
     }
@@ -115,6 +115,7 @@ html {
     /* ReSharper disable once CssBrowserCompatibility */
     box-shadow: none;
 }
+
 @media (min-width: 1px) {
     .dice-points-controls,
     .dice-scoreboard {
@@ -123,38 +124,32 @@ html {
 
     .dice-points-controls {
         padding-left: 10px;
-    }
-
-    .dice-scoreboard {
-        padding-right: 50px;
-    }
-}
-
-@media (min-width: 768px) {
-    .dice-points-controls {
         position: absolute;
         top: 0;
         bottom: 0;
         left: 0;
-        width: 25%;
+        width: 30%;
         overflow-y: auto;
     }
 
     .dice-scoreboard {
+        padding-right: 50px;
         position: absolute;
         top: 0;
         bottom: 0;
         right: 0;
         overflow-y: scroll;
-        width: 75%;
+        width: 70%;
     }
+}
 
+@media (min-width: 768px) {
     .dice-points-controls,
     .dice-scoreboard {
         padding-bottom: 60px;
     }
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
